# WqSat_format

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
notebooks/: composite.ipynb  reader.ipynb  s2_reader.ipynb  s3_reader.ipynb
wqsat_format/: __init__.py  atcor.py  composite.py  manager.py  s2_atcor.py  s2_reader.py  s3_atcor.py  s3_reader.py  utils.py
